Bug 674207 - Assertion attempting to convert the value of the 'it' property in the shell to a primitive.  r=luke